[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-surf"
version = "0.1.0"
description = "Cython bindings to the CAT-Surface library (libCAT) for cortical surface analysis"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Christian Gaser", email = "christian.gaser@uni-jena.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
io = ["nibabel>=3.0"]

[project.urls]
Homepage = "https://github.com/ChristianGaser/CAT-Surface"
Repository = "https://github.com/ChristianGaser/CAT-Surface"

[tool.setuptools.packages.find]
include = ["cat_surf*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
test-requires = "numpy"
test-command = "python -c \"import cat_surf; print('cat_surf', cat_surf.__version__, 'OK')\""

[tool.cibuildwheel.linux]
before-build = "yum install -y expat-devel 2>/dev/null || apt-get install -y libexpat1-dev 2>/dev/null || true"
